style.css
body {
    font-family: Helvetica, sans-serif;
}

h1 {
    font-size: 50px;
}

.header {
    background-color: white;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    margin: 0 auto;
    text-transform: uppercase;
}

.header img {
    height: 50px;
}

#p2 {
    transform: scaleX(-1);
}

.img-grid {
    display: flexbox;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.img-cont {
    height: 400px;
    width: 300px;
    flex-direction: column;
    overflow: hidden;
    background-color: #e3e3e3;
    border-radius: 15px;
    border-color: black;
    border-width: 4px;
}

.social-img {
    height: 250px;
}

